--- a/index.html
+++ b/index.html
@@ -1,62 +1,58 @@
-	<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd"><html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-	<meta name="language" content="en-us" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>isaimini 2021 Download isaimini Tamil HD Movies Download isaimini Tamil 1080p Movies Download</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content=" isaimini 2021 Download isaimini Tamil HD Movies Download isaimini Tamil 1080p Movies Download " />
-	<meta name="keywords" content=" isaimini 2021 Download isaimini Tamil HD Movies Download isaimini Tamil 1080p Movies Download " />
-	<meta name="classification" content=" isaimini 2021 Download isaimini Tamil HD Movies Download isaimini Tamil 1080p Movies Download " />
-	<meta name="distribution" content="Global" />
-	<meta name="rating" content="General" />
-	<meta name="robots" content="index, follow" />
-	<meta name="revisit-after" content="1 days" />
-	<link rel="shortcut icon" href="/img/isaidub.png" />
+<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd"><html xmlns="http://www.w3.org/1999/xhtml">
 
-	<link rel="STYLESHEET" type="text/css" href="/style.css" media="all,handheld"/>
+<head>
+<meta name="language" content="en-us" />
+<meta name="google-site-verification" content="qr4f8mLvJfKCyotP_2_Oogum9A-7OxTIe35jU2kec5Q" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>4Movierulz plz 2022 Download  Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content=" 4Movierulz plz 2022 Download  Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download " />
+<meta name="keywords" content="4 Movierulz plz 2022 Download  Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download " />
+<meta name="classification" content=" 4Movierulz plz 2022 Download Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download " />
+<meta name="distribution" content="Global" />
+<meta name="rating" content="General" />
+<meta name="robots" content="index, follow" />
+<link rel="shortcut icon" href="img/isaidaab.png" />
+<link rel="STYLESHEET" type="text/css" href="style.css" media="all,handheld"/>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK9EC9YH1T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	</head><body><div class="line"><font size="4px">Isaimini.Com</font><br/><small>Name Of Quality</small></div>
-	
-	</div>
-	
-	<center><div class="form">
-	<a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw"><font color="green">isaimini 2022 Download</font></a> - <a href="/moviesda-tamil-movies"><font color="green">Moviesda Tamil Movies</font></a>
-	</div></center>
-	
-	
-	
-	<div class="line">Tamil Mobile Downloads</div>
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil Mp3 Songs</a></div> 
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil Ringtones Download</a></div>
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil HD Videos Download</a></div> 
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzwsite_tamil_movie_trailers.xhtml">Tamil HD Trailers Download</a></div>
+  gtag('config', 'G-QK9EC9YH1T');
+</script>
+</head><body><div class="line"><font size="5px">Tamilrockers Isaimini.Com</font><br/><small>Best Quality</small></div>
 
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil Mobile Movies Download</a></div> 
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil Dubbed Movies Download</a></div> 
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzwisaimini-tamil-updates.html">Tamil Recent Updates [Weekly]</a></div> 
+<center><div class="form"> <a href=" http://isaimini-2022.freejobnaukri.info "><font color="green">isaimini 2022 Download</font></a> - <a href="https://Moviesda.freejobnaukri.info/"><font color="green">Moviesda Tamil Movies</font></a> </div></center>
+Movierulz plz 2022 Download isaimini Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download <div class="line">Tamil Mobile Movie Downloads</div>
 
-	
-	
-	<div class="line">Get Downloads</div>
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil Songs Lyrics Download</a></div> 
-	
-	<div class="f"><img src="https://github.com/4Movierulz-Tamil/4Movierulz-Tamil/blob/main/imgdir.gif.png" alt="[+]" /> <a href="https://www.google.com/url?q=https%3A%2F%2Fdigitalaffi.com%2Fpayment%2Fbest-payment-gatways-intergration-on-website-sample-code%2F&sa=D&sntz=1&usg=AFQjCNGUp5dOKJm_KCPSPna0ih32K54Qzw">Tamil 2022 Movies Download</a></div> 
-	
-	
-	<div class="aut">Page Tags :</div>
-	
-	<div class="Tag"><font color="red">isaimini 2021 Movies Download isaimini Latest Movies Download isaimini mobile download Tamilrockers isaiminiya.net isaimini home isaimini mp3 Songs Download isaimini 2021 tamil mp3 Songs Download Tamil 2020 Mp3 Songs Download isaimini 2020 New Tamil Dubbed Movie Download</font></div>
-	
-	<div class="line"> © Isaimini.com <br/>All Right
-	Reserved</div>
-	
-	</body>
-	</html>
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif"/> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/insurance/home-insurance/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIBhAB&usg=AOvVaw0aDWGFwSWOYraXgajPBm3O ">Tamil 2022 Movies</a></div> 
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/cryptocurrencies/yearn-finance-crypto-mining-using-python/&ved=2ahUKEwiHx6vZjuv0AhVIMN4KHQJ0CAMQFnoECAMQAQ&usg=AOvVaw1TS_v2YrHseAdecfkIDhXR ">Tamil 2021 Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/insurance/home-insurance/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIBhAB&usg=AOvVaw0aDWGFwSWOYraXgajPBm3O ">Tamil  2020 Movies</a></div> 
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/cryptocurrencies/yearn-finance-crypto-mining-using-python/&ved=2ahUKEwiHx6vZjuv0AhVIMN4KHQJ0CAMQFnoECAMQAQ&usg=AOvVaw1TS_v2YrHseAdecfkIDhXR ">Tamil 2019 Movies</a></div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/insurance/home-insurance/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIBhAB&usg=AOvVaw0aDWGFwSWOYraXgajPBm3O ">Tamil Mobile Movies</a></div> 
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/cryptocurrencies/yearn-finance-crypto-mining-using-python/&ved=2ahUKEwiHx6vZjuv0AhVIMN4KHQJ0CAMQFnoECAMQAQ&usg=AOvVaw1TS_v2YrHseAdecfkIDhXR ">Tamil Dubbed Movies</a></div> 
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/insurance/home-insurance/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIBhAB&usg=AOvVaw0aDWGFwSWOYraXgajPBm3O ">Tamil Recent Updates [Daily]</a></div> 
+
+<div class="line">More Movie Downloads</div>
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif"/> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/cryptocurrencies/huobi-token-crypto-mining-using-python-script-coinmarketcap-news-wallet-calculator/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIAxAB&usg=AOvVaw2xfAUjCuJYtOr6m7iNFTMU ">Bollywood 2022 Movies</a></div> 
+
+<div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif" /> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/insurance/home-insurance/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIBhAB&usg=AOvVaw0aDWGFwSWOYraXgajPBm3O ">Hollywood 2022 Movies</a></div> 
+
+<div class="aut">Page Tags :</div>
+
+<div class="Tag"><font color="green"> Movierulz.com 2022 Download Movierulz Latest Movies Download Tamil 4movierulz plz ple max ds ps Vpn Apk mobile Movie download Movierulz hd 2021Download Tamil 2022 Mp3 Songs Download isaimini 2020 720p</font></div>
+
+<div class="line"> © Tamilrockers Isaiminiya <br/>All Right Reserved</div>
+
+</body>
+</html>
