--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head><body><div class="line"><font size="5px">Tamilrockers Isaimini.Com</font><br/><small>Best Quality</small></div>
 
 <center><div class="form"> <a href=" http://isaimini-2022.freejobnaukri.info "><font color="green">isaimini 2022 Download</font></a> - <a href="https://Moviesda.freejobnaukri.info/"><font color="green">Moviesda Tamil Movies</font></a> </div></center>
-Movierulz plz 2022 Download isaimini Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download <div class="line">Tamil Mobile Movie Downloads</div>
+Movierulz plz 2022 Download isaimini Tamil HD Movies Download Movierulz ple Tamil 1080p Movies Download <div class="line">Tamil Mobile Movie Downloads</div><a href=" http://Movierulz.freejobnaukri.info "><font color="green">Movierulz 2022 Download</font></a>
 
 <div class="f"><img src="https://user-images.githubusercontent.com/91381456/149363421-8f48a714-4e47-40a4-8787-6a5be522b3b8.gif"/> <a href=" https://www.google.com/url?sa=t&source=web&rct=j&url=https://jnv.academy/insurance/home-insurance/&ved=2ahUKEwiLp57djev0AhWehlYBHShPCzo4KBAWegQIBhAB&usg=AOvVaw0aDWGFwSWOYraXgajPBm3O ">Tamil 2022 Movies</a></div> 
 
